feat(#21): implement CLI to operate controlplane (#22)
* feat(#21): implement CLI to operate controlplane

* fix
